# panoptic-lsb

./: .gitignore  README.md  active.py  dataset_paths.yaml  figplot.py  pyproject.toml  run.py
data/: class_maps.py  dataset.py  scale.py  training_utils.py
panoptic/: contaminants.py  forward.py  models.py  optim.py
panoptic/attention/: attention.py  grid.py  loss.py  models.py  utils.py
panoptic/attention/gabor/: attention.py  gabor.py
panoptic/mrcnnhelper/: coco_eval.py  coco_utils.py  engine.py  readme.md
plots/: active_plot.py
tests/: conftest.py  test_data.py
