[tool.poetry]
name = "panoptic-lsb"
version = "0.1.0"
description = ""
authors = ["Felix Richards <felixarichards@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
albumentations = "1.1.0"
matplotlib = "3.3.4"
numpy = "1.20.1"
opencv-python = "4.5.1.48"
Pillow = "8.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
